# yogi

./: Cargo.toml
dotnet/: Fingerprint.cs  Program.cs
resource/test-folder/: b.txt  c.txt
resource/test-folder/subfolder/: sub-a-copy.txt  sub-d.txt
src/: cache.rs  config.rs  fingerprint.rs  format.rs  main.rs  meta.rs  multiple.rs  opt.rs  rank.rs  single.rs
