[package]
name = "yogi"
version = "0.3.4"
authors = ["J/A <archer884@gmail.com>"]
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
clap = { version = "4.5.51", features = ["color", "derive", "env", "wrap_help"] }
fmtsize = { git = "https://github.com/archer884/fmtsize" }
hashbrown = "0.16.0"
imprint = { git = "https://github.com/archer884/imprint" }
regex = "1.12.2"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
